Adding authtentication usecase
