# src/modules/accounts/dtos/ICreateUserDTO.ts
@@ -1,0 +1,9 @@
+interface ICreateUserDTO {
+    name: string;
+    password: string;
+    email: string;
+    drive_license: string;
+}
+
+
+export { ICreateUserDTO }
