# src/routes/authenticate.routes.ts
@@ -1,0 +1,11 @@
+import { AuthenticateUserController } from "../modules/accounts/usecases/authenticate/AuthenticateUserController";
+import { Router } from "express";
+
+
+const authenticateRoutes = Router();
+const authenticateController = new AuthenticateUserController();
+
+authenticateRoutes.post("/sessions", authenticateController.handler);
+
+
+export { authenticateRoutes }
